From Demo To MyDev/sample/retrieveSource/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ActualLocation__c</fullName>
        <label>Факт. место встречи</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ActualStartDateTime__c</fullName>
        <label>Фактическое начало встречи (авт.)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Presentation_Time__c</fullName>
        <label>Факт. время открытия презентации</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account.BillingStreet &amp; BR() 
&amp; Account.BillingCity &amp; BR() 
&amp; Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Адрес организации</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentLocation__c</fullName>
        <label>Текущее местоположение</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of all events</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Appointment</fullName>
                </value>
                <value>
                    <fullName>Resource Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FactStartDateTime__c</fullName>
        <label>План. начало (согласованный план)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fact_Location__c</fullName>
        <formula>HYPERLINK( &quot;/apex/Event_Fact_Loc?id=&quot; + Id, &quot;карта&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Факт. место встречи (карта)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileInsertDateTime__c</fullName>
        <label>Время загрузки вложения (фото)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NewEvent__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/n/NewEvent&quot;, &quot;Новая встреча&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Новая встреча</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Сотрудник Партнера</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Partner__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Партнер</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlannedLocation__c</fullName>
        <label>Место встречи</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <label>Комментарий (текст)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Статус</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <label>Запланирована</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <label>Начата</label>
                </value>
                <value>
                    <fullName>Finished</fullName>
                    <label>Завершена</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <label>Отменена</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitTask1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Договор согласован</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitTask2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Договор подписан</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitTask3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Тренинг по новым продуктам проведён</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>